fix: truncate Track text and fix various display bugs

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -4,9 +4,13 @@ html,
   height: 100%;
 }
 
+body {
+  background: #f4f4f9;
+}
+
 .App {
   text-align: center;
-  height: 100%;
+  min-height: 100vh;
   font-weight: 500;
   background: #f4f4f9;
   padding: 0 10% 10% 10%;
